DE1-SoC/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:19:35 **** Incremental Build of configuration Debug for project study ****
make all 
'Building file: ../src/study.c'
'Invoking: GCC C Compiler 4 [arm-linux-gnueabihf]'
arm-linux-gnueabihf-gcc -I"C:\intelFPGA_pro\17.1\embedded\ip\altera\hps\altera_hps\hwlib\include\soc_cv_av" -I"C:\intelFPGA_pro\17.1\embedded\ip\altera\hps\altera_hps\hwlib\include" -O0 -g -Wall -c -fmessage-length=0 -MMD -MP -MF"src/study.d" -MT"src/study.o" -o "src/study.o" "../src/study.c"
'Finished building: ../src/study.c'
' '
'Building target: study'
'Invoking: GCC C Linker 4 [arm-linux-gnueabihf]'
arm-linux-gnueabihf-gcc  -o "study"  ./src/study.o   
'Finished building target: study'
' '
12:20:52 **** Incremental Build of configuration Debug for project study ****
make all 
'Building file: ../src/study.c'
'Invoking: GCC C Compiler 4 [arm-linux-gnueabihf]'
arm-linux-gnueabihf-gcc -I"C:\intelFPGA_pro\17.1\embedded\ip\altera\hps\altera_hps\hwlib\include\soc_cv_av" -I"C:\intelFPGA_pro\17.1\embedded\ip\altera\hps\altera_hps\hwlib\include" -O0 -g -Wall -c -fmessage-length=0 -MMD -MP -MF"src/study.d" -MT"src/study.o" -o "src/study.o" "../src/study.c"
In file included from ../src/study.c:5:0:
C:\intelFPGA_pro\17.1\embedded\ip\altera\hps\altera_hps\hwlib\include/hwlib.h:56:2: error: #error You must define soc_cv_av or soc_a10 before compiling with HwLibs
 #error You must define soc_cv_av or soc_a10 before compiling with HwLibs
  ^
make: *** [src/subdir.mk:20: src/study.o] Error 1
12:22:04 **** Incremental Build of configuration Debug for project study ****
make all 
'Building file: ../src/study.c'
'Invoking: GCC C Compiler 4 [arm-linux-gnueabihf]'
arm-linux-gnueabihf-gcc -Dsoc_cv_av -I"C:\intelFPGA_pro\17.1\embedded\ip\altera\hps\altera_hps\hwlib\include\soc_cv_av" -I"C:\intelFPGA_pro\17.1\embedded\ip\altera\hps\altera_hps\hwlib\include" -O0 -g -Wall -c -fmessage-length=0 -MMD -MP -MF"src/study.d" -MT"src/study.o" -o "src/study.o" "../src/study.c"
'Finished building: ../src/study.c'
' '
'Building target: study'
'Invoking: GCC C Linker 4 [arm-linux-gnueabihf]'
arm-linux-gnueabihf-gcc  -o "study"  ./src/study.o   
'Finished building target: study'
' '
